# falcondb

./: .gitignore  Constitution.txt  README.md
doc/: StorageFormats.txt
other/: license-template.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ifalcon/: CMakeLists.txt  main.cpp
src/apps/mongofalcon/: CMakeLists.txt  main.cpp
src/backend_leveldb/: CMakeLists.txt  backend.cpp  backend.hpp  database.cpp  database.hpp
src/backend_nessdb/: CMakeLists.txt  backend.cpp  database.cpp  database.hpp
src/backends/: CMakeLists.txt
src/backends/leveldb/: CMakeLists.txt  backend.cpp  database.cpp
src/backends/nessdb/: CMakeLists.txt  backend.cpp  backend.hpp  database.cpp  database.hpp
src/bson/: CMakeLists.txt  allocators.hpp  atomic.hpp  base64.cpp  base64.hpp  bson-inl.h  bson.hpp  bson_builder_base.h  bson_db.h  bsonelement.h  bsonelement.hpp  bsonelement.ipp  bsonmisc.h  bsonobj.h  bsonobj.hpp  bsonobj.ipp  bsonobjbuilder.h  bsonobjbuilder.hpp  bsonobjbuilder.ipp  bsonobjiterator.h  bsonobjiterator.hpp  bsontypes.h  buf_builder.hpp  date.hpp  embedded_builder.h  embedded_builder.hpp  enums.hpp  hex.h  jsobj.cpp  jsobj.hpp  json.cpp  json.hpp  lex_num_cmp.hpp  misc.hpp  nonce.cpp  oid.cpp  oid.hpp  optime.h  optime.hpp  ordering.h  (+7 more)
src/bson/util/: atomic_int.h  atomic_intrinsics.h  atomic_word.h  builder.h  misc.h
src/bson_test/: CMakeLists.txt  another.cpp  bson.cpp  bson2.cpp  main.cpp
src/cmakeModules/: FindLevelDB.cmake
src/cmake_modules/: FindNessDB.cmake
src/console_frontend/: CMakeLists.txt  command_dispatcher.cpp  command_dispatcher.hpp  console_frontend.cpp  console_frontend.hpp  frontend.cpp  frontend.hpp
src/dbengine/: CMakeLists.txt  command_context.cpp  command_context.hpp  command_processor.cpp  command_processor.hpp  commands.cpp  commands.hpp  database.cpp  database.hpp  database_impl.cpp  database_impl.hpp  document_storage.cpp  document_storage.hpp  engine.cpp  engine.hpp
src/document/: CMakeLists.txt  README.txt  document.cpp  document.hpp  document.ipp  document_list.cpp  document_list.hpp  document_list.ipp  document_object.cpp  document_object.hpp  document_object.ipp  document_scalar.cpp  document_scalar.hpp  document_scalar.ipp  json_parser.cpp  json_parser.hpp  json_writer.cpp  json_writer.hpp  null_type.hpp
src/document/detail/: scalar_variant.hpp  variants.hpp
src/document_test/: main.cpp
src/engine/: CMakeLists.txt  command_processor.cpp  command_processor.hpp  database_impl.cpp  database_impl.hpp  engine.cpp  engine.hpp
src/frontend/mongo/: CMakeLists.txt  admin_collection.hpp  collection.cpp  collection.hpp  collection_group.cpp  connection.cpp  connection.hpp  engine.cpp  engine.hpp  frontend.cpp  frontend.hpp  message.hpp  message.tpp
src/frontends/: CMakeLists.txt
src/frontends/console/: CMakeLists.txt  command_dispatcher.hpp  frontend.hpp
src/frontends/mongo/: CMakeLists.txt  admin_collection.cpp  admin_collection.hpp  base_collection.cpp  base_collection.hpp  collection.cpp  collection.hpp  collection_group.cpp  collection_group.hpp  connection.cpp  connection.hpp  engine.cpp  engine.hpp  frontend.cpp  frontend.hpp
src/ifalcon/: CMakeLists.txt  README.txt  main.cpp
src/indexes/: CMakeLists.txt
src/indexes/btree/: CMakeLists.txt  btree.cpp  btree.hpp  index.cpp  index.hpp  index_iterator.cpp  index_iterator.hpp  index_type.cpp  index_type.hpp
src/indexes/btree_test/: CMakeLists.txt  main.cpp  tree.cpp
src/interfaces/: CMakeLists.txt  README.txt  command_context.hpp  document_storage.hpp  engine.hpp  index.hpp  storage_backend.hpp
src/mongofalcon/: CMakeLists.txt  main.cpp
src/new_doc/: CMakeLists.txt  document_serializer.hpp  dynamic_document.hpp  json_document_writer.cpp  json_document_writer.hpp  json_parser.cpp  json_parser.hpp  json_writer.cpp  main.cpp
src/tests/: CMakeLists.txt
src/tests/bson/: README.txt  bson.cpp
src/tests/document/: CMakeLists.txt  main.cpp
src/tests/indexes/btree/: tree.cpp
src/threads/: message_queue.cpp  message_queue.hpp
src/utils/: CMakeLists.txt  backtrace_data.cpp  backtrace_data.hpp  error_message.hpp  exception.cpp  exception.hpp  filesystem.hpp  log.hpp  range.hpp  rwmutex.cpp  rwmutex.hpp  string.hpp  tscclock.hpp
